tests/invalid/generated_binop_pow_bytearray_none/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytearray = bytearray(b"hello")
    y: None = None
    z = x ** y
